--- a/bahamut/css/guide-global.css
+++ b/bahamut/css/guide-global.css
@@ -60,6 +60,11 @@ html{
     margin-bottom: 3rem;
 }
 
+.img-thumbnail{
+    border-radius: 1rem;
+    box-shadow: 0 0px 8px #111, 0 0px 8px #111;
+}
+
 .site-content h1, .site-content h2, .site-content h3, .site-content h4, .site-content h5, .site-content h6 {
     color: #333333;
 }
