--- a/bahamut/css/status.css
+++ b/bahamut/css/status.css
@@ -5,8 +5,8 @@
 .status-area>img{
 	width: 18px;
 	position: absolute;
-	margin-left: -1px;
-	margin-top: -5px;
+	margin-left: 3px;
+	margin-top: -3px;
 }
 
 .ui-body-c, .ui-link:visited, .ui-link {
@@ -21,5 +21,14 @@
 }
 
 .ui-body-c .ui-link{
+	font-weight: 500;
+}
+
+.status-area{
+	cursor: pointer;
+	text-decoration: none;
+	text-decoration: none;
+	text-shadow: 0 0px 2px #222;
+	color: #AA0F0F!important;
 	font-weight: 500;
 }
