--- a/bahamut/css/hover-global.css
+++ b/bahamut/css/hover-global.css
@@ -130,10 +130,10 @@
 }
 
 .img-hover-area img{
-    width: 20px;
+    width: 1.2rem;
     position: absolute;
-    margin-left: 3px;
-    margin-top: 2px;
+    margin-left: 0.2rem;
+    margin-top: 0.1rem;
 }
 
 .img-hover-area:hover{
