--- a/bahamut/css/status.css
+++ b/bahamut/css/status.css
@@ -3,10 +3,10 @@
 }
 
 .status-area>img{
-	width: 18px;
+	width: 1.1rem;
 	position: absolute;
-	margin-left: 3px;
-	margin-top: -3px;
+	margin-left: 0.1rem;
+	margin-top: -0.2rem;
 }
 
 .ui-body-c, .ui-link:visited, .ui-link {
