--- a/bahamut/css/guide-global.css
+++ b/bahamut/css/guide-global.css
@@ -8,39 +8,103 @@ html{
 	
 }
 
+.site-title{
+    margin: 0 auto;
+    position: relative;
+    height: auto;
+}
+
+#site-title-content{
+    width: 47%;
+    margin: auto;
+    padding: 2.4rem 0 2.4rem 0;
+}
+
+#site-title-img{
+    margin: auto;
+}
+
+.site-menu{
+    width: 100%;
+    height: 3rem;
+    background: #CCC2A8;
+}
+
+.site-menu-area{
+    margin: auto auto;
+    width: 87%;
+    height: 100%;
+
+}
+
+.site-menu-item{
+    float: left;
+    width: 20%;
+    height: 100%;
+    background: #CCC2A8;
+    color: #57432F;
+}
+
+.site-menu-item:hover{
+    background: #57432F;
+    color: #CCC2A8;
+    cursor: pointer;
+}
+
+.site-menu-item-name{
+    margin-top: 1rem;
+    text-align: center;
+    font-size: 0.85rem;
+}
+
+.gap{
+    border-left: #DBD1B9 solid 0.06rem;
+    border-right: #C1B097 solid 0.06rem;
+    height: 60%;
+    float: right;
+    margin: 0.67rem 0;
+    width: 0;
+}
+
+
+.site-menu-item:hover .gap{
+    display: none;
+}
 
 .site-wrapper {
     margin: 0 auto;
     position: relative;
-    background-color: #E4DFD6;
+    background-color: #E6E1D4;
 }
 
 .site-content{
-	padding: 6rem -0px 30rem -0px;
+	padding: 0rem -0px 30rem -0px;
 
 }
+
 @media screen and (min-width: 64em) {
 	.site-container {
-	    max-width: 1080px;
-	    max-width: 108rem;
+	    padding: 0 20%;
 	}
+
+    .site-menu-area{
+        width: 60%;
+    }
+
+    .guide-thumbnail{
+        width: 100%;
+        margin: 0 auto;
+    }
 }
 
-@media screen and (min-width: 48em){
+@media screen and (min-width: 10em) and (max-width: 64em){
 	.site-content{
-		padding: 60px -0px 120px -0px;
-		padding: 6rem -0px 20rem -0px;
-	}
-}
-
-@media screen and (min-width: 10em){
-	.site-content{
-		padding: 40px -0px;
-		padding: 10rem -0px;
+		padding: 0px -0px;
+		padding: 0rem -0px;
 	}
 
 	.site-container{
-		padding: 0 5%;
+		padding: 0 15%;
 	}
 
 	.page-content{
@@ -55,17 +119,16 @@ html{
     margin: 0 auto;
 }
 
+
 .guide-thumbnail{
-    margin-bottom: 30px;
-    margin-bottom: 3rem;
+    margin-bottom: 0rem;
 }
 
 .img-thumbnail{
-    border-radius: 1rem;
-    box-shadow: 0 0px 8px #111, 0 0px 8px #111;
+
 }
 
-.site-content h1, .site-content h2, .site-content h3, .site-content h4, .site-content h5, .site-content h6 {
+.site-content h1, .site-content h2, .site-content h3,  .site-content h5, .site-content h6 {
     color: #333333;
 }
 
@@ -82,7 +145,7 @@ div{
 	display: block;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h5, h6 {
     clear: both;
     font-weight: 700;
     margin: 1em 0;
@@ -100,6 +163,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     padding: 0;
     vertical-align: baseline;
 }
+
 
 *, *:before, *:after {
     -webkit-box-sizing: inherit;
@@ -123,10 +187,66 @@ h1{
     text-shadow: 0 2px 6px #222;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h5, h6 {
     clear: both;
     font-weight: 500;
     margin: 1em 0;
     line-height: 1.3;
 }
 
+p, li, a{
+    line-height: 1.5rem;
+}
+
+hr{
+    border-left: none;
+    border-right: none;
+    border-top:#D1C2AA solid;
+    border-bottom:#EFE9E1 solid;
+    height: 0rem;
+}
+
+
+.paragraph-title{
+    width: 100%;
+    height: 2.5rem;
+    position: relative;
+    margin: 3rem 0 2rem 0;
+}
+
+.title-hr{
+    
+    border-top: #DBD1B9 solid 0.06rem;
+    border-bottom: #C1B097 solid 0.06rem;
+    height: 0;
+    float: right;
+    margin: 1.2rem 0;
+    width: 100%;
+}
+
+.paragraph-title-content{
+    position: absolute;
+    text-align: center;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+}
+
+.paragraph-title-img{
+    height: 2.5rem;
+}
+
+.site-content h4{
+    color: white;
+    border-radius: .4rem;
+    background: #CCC2A8;
+    width:fit-content;
+    width:-webkit-fit-content;
+    width:-moz-fit-content;
+    padding: 0.25rem 0.6rem;
+    font-size: 1.1rem;
+    font-weight: 100;
+    margin: 1.5rem 0;
+}
