--- a/bahamut/css/hover-global.css
+++ b/bahamut/css/hover-global.css
@@ -123,17 +123,16 @@
 }
 
 .img-hover-area{
-    color: #AA0F0F!important;
+    color: #BF1717!important;
     cursor: pointer;
     text-decoration-line: none;
-    text-shadow: 0 0px 2px #222;
 }
 
 .img-hover-area img{
     width: 1.2rem;
     position: absolute;
-    margin-left: 0.2rem;
-    margin-top: 0.1rem;
+    margin-left: 0rem;
+    margin-top: 0.3rem;
 }
 
 .img-hover-area:hover{
