--- a/bahamut/css/edit-vis.css
+++ b/bahamut/css/edit-vis.css
@@ -6,6 +6,7 @@
 	min-width:fit-content!important;
     min-width:-webkit-fit-content;
     min-width:-moz-fit-content;
+    text-align: center;
 }
 
 .vis-timeline{
